--- a/Section04/DianaP_Section4HW.ipynb
+++ b/Section04/DianaP_Section4HW.ipynb
@@ -626,10 +626,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['orange', 'melon', 'mango', 'kiwi', 'cherry', 'banana', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits_list = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+    "fruits_list.sort(reverse=True)\n",
+    "print(fruits_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -641,10 +653,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "time = dt.datetime.now()\n",
+    "print(time.month)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -659,10 +683,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Diana! Happy Monday!\n",
+      "\n",
+      "Hola Jose! Happy Sunday!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greeting(first_name, day_name = \"Sunday\"):\n",
+    "    print(f\"Hola {first_name}! Happy {day_name}!\")\n",
+    "    return \"\"\n",
+    "print(greeting(\"Diana\", \"Monday\"))\n",
+    "print(greeting(\"Jose\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -673,10 +714,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def divide(x,y):\n",
+    "    try:\n",
+    "        res = divide(x,y)\n",
+    "        print(res)\n",
+    "    except:\n",
+    "        print(\"An exception occurred\")\n",
+    "    else:\n",
+    "        print(\"Nothing went wrong\")\n",
+    "    finally:\n",
+    "        print(\"The 'try except' is finished\")"
+   ]
   }
  ],
  "metadata": {
