SECTION 4 HW UPDATE

--- a/Section04/DianaP_Section4HW.ipynb
+++ b/Section04/DianaP_Section4HW.ipynb
@@ -549,20 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple\n",
-      "banana\n"
+      "kiwi\n",
+      "melon\n"
      ]
     }
    ],
    "source": [
-    "fruits_list = [\"apple\", \"banana\", \"cherry\"]\n",
+    "fruits_list = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
     "print(fruits_list[-3])\n",
     "print(fruits_list[-2])"
    ]
@@ -576,20 +576,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['orange', 'kiwi', 'melon']\n"
+      "['cherry', 'orange', 'kiwi']\n"
      ]
     }
    ],
    "source": [
     "fruits_list = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
-    "print(fruits_list[3:6])"
+    "print(fruits_list[2:5])"
    ]
   },
   {
@@ -653,21 +653,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "August\n"
      ]
     }
    ],
    "source": [
-    "import datetime as dt\n",
-    "time = dt.datetime.now()\n",
-    "print(time.month)"
+    "import datetime\n",
+    "current_datetime = datetime.datetime.now()\n",
+    "full_month_name = current_datetime.strftime('%B')\n",
+    "print(full_month_name)"
    ]
   },
   {
