--- a/Section03/DianaPPythonHW.ipynb
+++ b/Section03/DianaPPythonHW.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +88,9 @@
     "7. \n",
     "string_var = \"Savvy Coders\"\n",
     "list_var = [1, 2, 3, 4, 5]\n",
+    "int_var = 1\n",
+    "float_var = 3.14\n",
+    "boolean_var = True\n",
     "\n",
     "\n",
     "string_length = len(string_var)\n",
@@ -129,14 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi my name is Miles, I am not tall and 19 years old today.\n"
+      "Hi my name is Miles, I am not tall and 19 years old today.\n",
+      "19.4\n"
      ]
     }
    ],
@@ -147,7 +151,8 @@
     "miniBio = \"Hi my name is {}, I am {} tall and {} old today.\".format(name, length, age)\n",
     "print(miniBio)\n",
     "\n",
-    "# I am not sure how to do a float. \n"
+    "age = 19.4\n",
+    "print(float(age))\n"
    ]
   },
   {
