--- a/Section05/DianaP_Section05_HW.ipynb
+++ b/Section05/DianaP_Section05_HW.ipynb
@@ -53,41 +53,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  4.  8. 12. 16. 20.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8. Use NumPy .linspace() to create an array with 6 linearly spaced values between 0 and 20"
+    "# 8. Use NumPy .linspace() to create an array with 6 linearly spaced values between 0 and 20\n",
+    "\n",
+    "new_array = np.linspace(0,20,6)\n",
+    "print(new_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 9. Make a Deep Copy of the above array"
+    "# 9. Make a Deep Copy of the above array\n",
+    "\n",
+    "import copy\n",
+    "\n",
+    "deep = copy.deepcopy(new_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3026162728.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[10], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    ([[25, 16]])\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "# 10. Concatenate these 3 arrays into a new array named 'newArray'...\n",
     "\n",
@@ -98,35 +108,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 11. Sort 'newArray' in order into 'sortedArray'"
+    "arrayA = ([[25, 16]])\n",
+    "arrayB = ([[11, 2], [13, 4]])\n",
+    "arrayC = ([[7, 81], [5, 6], [11, 12]])\n",
+    "\n",
+    "newArray = np.concatenate((arrayA, arrayB, arrayC), axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 12. Unpack the array tuples from the above 'reshapedArray' into 4 well named variables. Print the 4 variables."
+    "# 11. Sort 'newArray' in order into 'sortedArray'\n",
+    "\n",
+    "sortedArray = np.sort(newArray)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'array' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# 12. Unpack the array tuples from the above 'reshapedArray' into 4 well named variables. Print the 4 variables.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m var1,var2,var3,var4 \u001b[39m=\u001b[39m array\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(var1)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(var2)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'array' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 12. Unpack the array tuples from the above 'reshapedArray' into 4 well named variables. Print the 4 variables.\n",
+    "\n",
+    "var1,var2,var3,var4 = array\n",
+    "\n",
+    "print(var1)\n",
+    "print(var2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -227,13 +255,6 @@
    "source": [
     "# 20. (A) Using Pandas, make your own .CSV file with data on vegetables and save it. (B) Using Pandas, make a change to your CSV file, and save a copy with a different name."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
