--- a/Section05/DianaP_Section05_HW.ipynb
+++ b/Section05/DianaP_Section05_HW.ipynb
@@ -9,8 +9,8 @@
     "- _Python Data Analysis_\n",
     "\n",
     "2. What are the 2 collections used in Pandas?\n",
-    "- _NumPy_\n",
-    "- _Python Data Analysis_\n",
+    "- _Series_\n",
+    "- _Data Frames_\n",
     "\n",
     "3. Name 4 things Pandas can do for us.\n",
     "    1. _Data Cleansing_\n",
@@ -25,18 +25,23 @@
     "5. What is a CSV?\n",
     "_File that uses commas to separate values. Comma-separated values = CSV._\n",
     "\n",
-    "6. When cleaning data what values do we not like in our data?\n"
+    "6. When cleaning data what values do we not like in our data?\n",
+    "_Null values_\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n",
       "[[[ 0  1]\n",
       "  [ 2  3]\n",
       "  [ 4  5]]\n",
@@ -53,17 +58,18 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# Create an array \n",
-    "array = np.arange(12)\n",
+    "# Create first array \n",
+    "first_array = np.array([(1,2,3),(4,5,6),(7,8,9),(10,11,12)])\n",
+    "print(first_array)\n",
     "\n",
     "# Reshape array \n",
     "reshaped_array = array.reshape(2, 3, 2)\n",
-    "print(reshaped_array)\n"
+    "print(reshaped_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -163,36 +169,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1]\n",
-      " [2 3]\n",
-      " [4 5]]\n",
-      "[[ 6  7]\n",
-      " [ 8  9]\n",
-      " [10 11]]\n"
+      "[1 2 3]\n",
+      "[4 5 6]\n",
+      "[7 8 9]\n",
+      "[10 11 12]\n"
      ]
     }
    ],
    "source": [
     "# 12. Unpack the array tuples from the above 'reshapedArray' into 4 well named variables. Print the 4 variables.\n",
     "\n",
-    "var1,var2 = reshaped_array\n",
+    "var1,var2,var3,var4 = first_array\n",
     "\n",
     "print(var1)\n",
     "print(var2)\n",
+    "print(var3)\n",
+    "print(var4)\n",
     "\n",
-    "#There's only two variables in the reshaped array, so I'm not sure what the question is asking for here."
+    "#Re-do."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +343,7 @@
        "3        Spam         1    can"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +544,7 @@
        "1  Cashew Fudge  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +610,7 @@
        "1     Year 2    20     19"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
