--- a/Section05/DianaP_Section05_HW.ipynb
+++ b/Section05/DianaP_Section05_HW.ipynb
@@ -17,21 +17,23 @@
     "    2. _Data Normalization_\n",
     "    3. _Data Visualization_\n",
     "    4. _Data Inspection_\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
     "4. To permanently sort a DataFrame, which keyword should one use with the df.sort() method?\n",
     "<br>\n",
-    "inplace = True\n",
+    "_inplace = True_\n",
     "\n",
     "5. What is a CSV?\n",
     "_File that uses commas to separate values. Comma-separated values = CSV._\n",
     "\n",
     "6. When cleaning data what values do we not like in our data?\n",
+    "<br>\n",
     "_Null values_\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,13 +44,13 @@
       " [ 4  5  6]\n",
       " [ 7  8  9]\n",
       " [10 11 12]]\n",
-      "[[[ 0  1]\n",
-      "  [ 2  3]\n",
-      "  [ 4  5]]\n",
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
       "\n",
-      " [[ 6  7]\n",
-      "  [ 8  9]\n",
-      "  [10 11]]]\n"
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
      ]
     }
    ],
@@ -59,8 +61,8 @@
     "import pandas as pd\n",
     "\n",
     "# Create first array \n",
-    "first_array = np.array([(1,2,3),(4,5,6),(7,8,9),(10,11,12)])\n",
-    "print(first_array)\n",
+    "array = np.array([(1,2,3),(4,5,6),(7,8,9),(10,11,12)])\n",
+    "print(array)\n",
     "\n",
     "# Reshape array \n",
     "reshaped_array = array.reshape(2, 3, 2)\n",
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +188,7 @@
    "source": [
     "# 12. Unpack the array tuples from the above 'reshapedArray' into 4 well named variables. Print the 4 variables.\n",
     "\n",
-    "var1,var2,var3,var4 = first_array\n",
+    "var1,var2,var3,var4 = array\n",
     "\n",
     "print(var1)\n",
     "print(var2)\n",
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
