--- a/Section07/DianaP_Section07HW.ipynb
+++ b/Section07/DianaP_Section07HW.ipynb
@@ -1,12 +1,138 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Soon..."
+    "# Section 7.1 \n",
+    "## Question 1\n",
+    "```SQL\n",
+    "\n",
+    "SELECT ModelYear, Make, Model\n",
+    "FROM EVRegistry\n",
+    "\n",
+    "```\n",
+    "## Question 2 \n",
+    "```SQL\n",
+    "\n",
+    "SELECT DISTRINCT ElectricVehicleType\n",
+    "FROM EVRegistry\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## Question 3\n",
+    "```SQL\n",
+    "\n",
+    "SELECT ElectricVehicleType\n",
+    "FROM evRegistry\n",
+    "WHERE ElectricVehicleType = 'Battery Electric Vehicle (BEV)'\n",
+    "\n",
+    "```\n",
+    "## Question 4 \n",
+    "```SQL\n",
+    "\n",
+    "SELECT Make, Model\n",
+    "FROM evRegistry\n",
+    "WHERE BaseMSRP BETWEEN 20000 AND 35000\n",
+    "\n",
+    "```\n",
+    "# Section 7.2 \n",
+    "## Question 1 \n",
+    "```SQL\n",
+    "\n",
+    "SELECT *\n",
+    "FROM EVRegistry\n",
+    "WHERE City = Null\n",
+    "\n",
+    "```\n",
+    "## Question 2 \n",
+    "```SQL\n",
+    "\n",
+    "SELECT Make, Model, ElectricVehicleType\n",
+    "FROM evRegistry\n",
+    "WHERE VIN LIKE '%3E1EA1J' \n",
+    "\n",
+    "```\n",
+    "## Question 3 \n",
+    "```SQL\n",
+    "\n",
+    "SELECT ModelYear, Make, Model, ElectricVehicleType, ElectricRange \n",
+    "FROM evRegistry\n",
+    "WHERE Make = 'TESLA' OR Make = 'CHEVROLET' \n",
+    "ORDER BY Make, ModelYear DESC\n",
+    "\n",
+    "```\n",
+    "## Question 4 \n",
+    "```SQL\n",
+    "\n",
+    "SELECT sessionId, COUNT(sessionId)\n",
+    "FROM evCharge\n",
+    "GROUP BY stationId\n",
+    "ORDER BY count(sessionID) DESC\n",
+    "LIMIT 5\n",
+    "\n",
+    "```\n",
+    "## Question 5 \n",
+    "```SQL\n",
+    "\n",
+    "SELECT userId\n",
+    "\t, MIN(ChargeTimeHrs) as minTime\n",
+    "\t, MAX(ChargeTimeHrs) as maxTime\n",
+    "FROM evCharge\n",
+    "GROUP BY userId\n",
+    "HAVING SUM(chargeTimeHrs) > 0.5\n",
+    "ORDER BY minTime, maxTime\n",
+    "\n",
+    "```\n",
+    "# Section 7.3 \n",
+    "## Question 1\n",
+    "```SQL\n",
+    "\n",
+    "SELECT weekday\n",
+    "\t, ROUND(sum(chargeTimeHrs), 2) AS chargetime\n",
+    "FROM EVCharging\n",
+    "GROUP BY weekday\n",
+    "ORDER BY chargetime DESC\n",
+    "LIMIT 1\n",
+    "\n",
+    "```\n",
+    "## Question 2\n",
+    "```SQL\n",
+    "\n",
+    "SELECT userId, ROUND(SUM(kwhTotal),2) as totalPower\n",
+    "FROM EVCharging\n",
+    "GROUP BY userId\n",
+    "ORDER BY totalPower DESC\n",
+    "LIMIT 15\n",
+    "\n",
+    "```\n",
+    "## Question 3\n",
+    "```SQL\n",
+    "\n",
+    "SELECT typeFacility\n",
+    "\t, count(distinct factcharge.stationID) as numStation\n",
+    "FROM dimFacility\n",
+    "INNER JOIN factCharge ON dimFacility.FacilityKey = factCharge.facilityID\n",
+    "GROUP BY typeFacility\n",
+    "ORDER BY numStation DESC\n",
+    "\n",
+    "```\n",
+    "## Question 4\n",
+    "\n",
+    "_Primary key_ ID's records in our tables. They are like snowflakes in that each is special and unique and cannot be null. _Foriegn key_ refers back to the primary key in another connected table. \n",
+    "\n",
+    "## Question 5\n",
+    "```SQL\n",
+    "\n",
+    "SELECT userId\n",
+    "\t, MIN(ChargeTimeHrs) as minTime\n",
+    "\t, MAX(ChargeTimeHrs) as maxTime\n",
+    "FROM EVCharging\n",
+    "GROUP BY userId\n",
+    "HAVING SUM(chargeTimeHrs) > 1\n",
+    "ORDER BY minTime, maxTime\n",
+    "\n",
+    "```"
    ]
   }
  ],
